Corrected spacing

--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -79,7 +79,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  font-weight: 700;
+  font-weight: 500;
 }
 
 body {
